sampler/chain/projects/conductor/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/tasks/SubWorkflow.java:91: error: [NullAway] (INDEX= 111) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                    null,
                    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/events/queue/DefaultEventQueueProcessor.java:183: error: [NullAway] (INDEX= 116) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        Message msg = new Message(UUID.randomUUID().toString(), objectMapper.writeValueAsString(outputMap), null);
                                                                                                            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/service/ExecutionService.java:101: error: [NullAway] (INDEX= 97) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return poll(taskType, workerId, null, count, timeoutInMilliSecond);
                                        ^

	(see http://t.uber.com/nullaway )
/Users/nima/Developer/NullAwayFixer/Projects/conductor/core/src/main/java/com/netflix/conductor/service/AdminServiceImpl.java:45: error: [NullAway] (INDEX= 136) (Covered) assigning @Nullable expression to @NonNull field
        this.workflowRepairService = workflowRepairService.orElse(null);
                                   ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/events/queue/DefaultEventQueueProcessor.java:183: error: [NullAway] (INDEX= 116) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        Message msg = new Message(UUID.randomUUID().toString(), objectMapper.writeValueAsString(outputMap), null);
                                                                                                            ^

	(see http://t.uber.com/nullaway )